Appel API fonctionnel
Récupération des infos !

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <main class="container">
         <div class="input-group d-flex justify-content-center flex-column align-items-center p-3">
             <input type="button" value="APPEL API METEO" onclick="GetMeteo()">
-            <p id="zone_meteo">toto</p>
+            <ul>
+                <li id="TempMin"><span>Température Min :</span></li>
+                <li id="TempMax"><span>Température Max :</span></li>
+                <li id="Temp"><span>Température :</span></li>
+            </ul>
         </div>
     </main>
 
