--- a/index.html
+++ b/index.html
@@ -6,20 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wheater Love</title>
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 </head>
 <body>
 
-    <main class="container">
-        <div class="input-group d-flex justify-content-center flex-column align-items-center p-3">
-            <ul>
-                <li id="TempMin"><span>Température Min : </span></li>
-                <li id="TempMax"><span>Température Max : </span></li>
-                <li id="Temp"><span>Température : </span></li>
-            </ul>
-        </div>
+    <main>
+        <div id="Meteo"></div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
