--- a/index.html
+++ b/index.html
@@ -36,17 +36,18 @@
             </div>
             <div id="Head">
                 <h1>COLMAR</h1>
-                <h2>32 <span>°C</span></h2> 
+                <h2 id="Temp"><span> °C </span></h2>
             </div>
             <div id="mountains">
-                <div class="mountain1"></div>
-                <div class="mountain2"></div>
-                <div class="mountain3"></div>
+                <div class="mountain1"><div class="Snow"></div></div>
+                <div class="mountain2"><div class="Snow"></div></div>
+                <div class="mountain3"><div class="Snow"></div></div>
             </div>
         </div>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <script src="app.js"></script>
     
 </body>
