--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <main>
         <div id="Meteo">
             <div class="sun"></div>
+            <div class="cloud petit"></div>
             <div id="background-wrap">
                 <div class="x1">
                     <div class="cloud"></div>
