--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Wheater Love</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="weather.css">
 </head>
 <body>
 
